# RapidHTML

./: .gitignore  Makefile  README.md  mkdocs.yml  pyproject.toml
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: check_format.yml  check_lint.yml  check_poetry_lockfile.yml  check_tests.yml  checks.yml
.github/workflows/setup_build_environment/: action.yml
docs/: conf.py  examples.rst  getting_started.md  index.md  index.rst
docs/components/: tables.md
docs/examples/: hello_world.md  hello_world.rst  live_reload.md  live_reload.rst  tag_callbacks.md  tag_callbacks.rst
docs/getting_started/: index.rst
docs_old/_build/: .buildinfo  autodocs.html  examples.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs_old/_build/.doctrees/: autodocs.doctree  environment.pickle  examples.doctree  index.doctree
docs_old/_build/.doctrees/apidoc/: modules.doctree  rapidhtml.doctree  rapidhtml.style.doctree  rapidhtml.utils.doctree
docs_old/_build/.doctrees/examples/: hello_world.doctree  live_reload.doctree  tag_callbacks.doctree
docs_old/_build/.doctrees/getting_started/: index.doctree
docs_old/_build/_sources/: autodocs.rst.txt  index.rst.txt
docs_old/_build/_sources/apidoc/: modules.rst.txt  rapidhtml.rst.txt  rapidhtml.style.rst.txt  rapidhtml.utils.rst.txt
docs_old/_build/apidoc/: modules.html  rapidhtml.html  rapidhtml.style.html  rapidhtml.utils.html
docs_old/_build/examples/: hello_world.html  live_reload.html  tag_callbacks.html
docs_old/_build/getting_started/: index.html
docs_old/examples/: hello_world.rst
examples/modern_table/: README.md  app.py  data.json  pyproject.toml  styles.py  table_html.py
src/quickhtml/: __init__.py  app.py  responses.py  routing.py  tags.py
src/quickhtml/style/: __init__.py  css.py
src/quickhtml/utils/: __init__.py
src/rapidhtml/: __init__.py  app.py  bases.py  callbacks.py  exceptions.py  responses.py  routing.py  tags.py
src/rapidhtml/components/table/: __init__.py
src/rapidhtml/style/: __init__.py  css.py  sheets.py
src/rapidhtml/utils/: __init__.py
tests/: test_app.py  test_css_style.py  test_cyclical_tag.py  test_live_reload.py  test_tags.py  test_tags_select.py  test_ws.py
tests/live_reload/: goodbye.py  hello.py
