[tool.poetry]
name = "rapidhtml"
version = "0.1.0"
description = "Web framework to generate web-based applications in pure python"
authors = [
    "ThomasJRyan <18319621+ThomasJRyan@users.noreply.github.com>",
    "moseye      <156830683+moseye@users.noreply.github.com>",
    "rashidnhm   <95639609+rashidnhm@users.noreply.github.com>",
]
readme = "README.md"
package-mode = true
packages = [{ include = "rapidhtml", from = "src" }]

[tool.poetry.dependencies]
python = "^3.9"
starlette = ">=0.38.2,<0.41.0"
httpx = "^0.27.0"
uvicorn = { version = "^0.30.5", extras = ["standard"] }

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
ruff = "^0.5.6"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
sphinx = "^7.4.7"
sphinx-autobuild = "^2024.4.16"

[tool.ruff]
include = ["src/rapidhtml/*.py", "tests/*.py"]

# [tool.ruff.lint.per-file-ignores]
# "src/rapidhtml/tags.py" = ["E742"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
